Adding data about the book Ready for B2

--- a/src/Main.tex
+++ b/src/Main.tex
@@ -22,7 +22,10 @@
 \newpage
 
 % Inclusión de secciones
-\input{sections/Food}
+%\input{sections/Food}
+
+\input{sections/Books.tex}
+
 
 \newpage
 \input{sections/IrregularVerbs.tex}
