--- a/src/aux/Preamble.tex
+++ b/src/aux/Preamble.tex
@@ -12,7 +12,6 @@
 \pagestyle{fancy}
 \fancyhf{}                        % Limpia los encabezados/pies
 \fancyfoot[C]{\thepage}           % Numeración en pie de página
-
 \fancyhead[L]{\leftmark}          % Sección en páginas pares
 \fancyhead[RO]{Vocabulary Annex}  % Título en impares
 \setlength{\headheight}{15.5pt}
@@ -54,3 +53,10 @@
 \newcommand{\esp}[1]{\textcolor{green!60!black}{#1}}
 
 \newcommand{\separator}{\\}
+\newcommand{\typeNoum}{Noum}
+\newcommand{\typeVerb}{Verb}
+\newcommand{\typeAdj}{Adj.}
+\newcommand{\typeAdv}{Adv.}
+\newcommand{\typePhrasalVerb}{Phr.V}
+\newcommand{\typeExpression}{Exp.}
+\newcommand{\typeCollocation}{Coll.}
