--- a/src/data/data_Food/Data_Food_Dairy.tex
+++ b/src/data/data_Food/Data_Food_Dairy.tex
@@ -1,21 +1,21 @@
-% {English therm}                           {US escepcion}  {Type}      {Spanish therm}         {Context}
-\newVocabularyConcept{Milk}                 {}              {Noun}      {Leche}                 {}
-\newVocabularyConcept{Cheese}               {}              {Noun}      {Queso}                 {}
-\newVocabularyConcept{Butter}               {}              {Noun}      {Mantequilla}           {}
-\newVocabularyConcept{Yoghurt}              {}              {Noun}      {Yogur}                 {}
-\newVocabularyConcept{Cream}                {}              {Noun}      {Nata}                  {}
-\newVocabularyConcept{Curd}                 {}              {Noun}      {Requesón}              {}
-\newVocabularyConcept{Cottage cheese}       {}              {Noun}      {Queso fresco}          {}
-\newVocabularyConcept{Ghee}                 {}              {Noun}      {Ghee}                  {}
-\newVocabularyConcept{Whey}                 {}              {Noun}      {Suero}                 {}
-\newVocabularyConcept{Custard}              {}              {Noun}      {Natilla}               {}
-\newVocabularyConcept{Clotted cream}        {}              {Noun}      {Nata cuajada}          {}
-\newVocabularyConcept{Ricotta}              {}              {Noun}      {Ricotta}               {}
-\newVocabularyConcept{Mozzarella}           {}              {Noun}      {Mozzarella}            {}
-\newVocabularyConcept{Parmesan}             {}              {Noun}      {Parmigiano}            {}
-\newVocabularyConcept{Cheddar}              {}              {Noun}      {Cheddar}               {}
-\newVocabularyConcept{Feta}                 {}              {Noun}      {Feta}                  {}
-\newVocabularyConcept{Brie}                 {}              {Noun}      {Brie}                  {}
-\newVocabularyConcept{Mascarpone}           {}              {Noun}      {Mascarpone}            {}
-\newVocabularyConcept{Sour cream}           {}              {Noun}      {Crema agria}           {}
-\newVocabularyConcept{Buttermilk}           {}              {Noun}      {Suero de mantequilla}  {}
+% {English therm}                           {US escepcion}  {Type}          {Spanish therm}         {Context}
+\newVocabularyConcept{Milk}                 {}              {\typeNoum}     {Leche}                 {}
+\newVocabularyConcept{Cheese}               {}              {\typeNoum}     {Queso}                 {}
+\newVocabularyConcept{Butter}               {}              {\typeNoum}     {Mantequilla}           {}
+\newVocabularyConcept{Yoghurt}              {}              {\typeNoum}     {Yogur}                 {}
+\newVocabularyConcept{Cream}                {}              {\typeNoum}     {Nata}                  {}
+\newVocabularyConcept{Curd}                 {}              {\typeNoum}     {Requesón}              {}
+\newVocabularyConcept{Cottage cheese}       {}              {\typeNoum}     {Queso fresco}          {}
+\newVocabularyConcept{Ghee}                 {}              {\typeNoum}     {Ghee}                  {}
+\newVocabularyConcept{Whey}                 {}              {\typeNoum}     {Suero}                 {}
+\newVocabularyConcept{Custard}              {}              {\typeNoum}     {Natilla}               {}
+\newVocabularyConcept{Clotted cream}        {}              {\typeNoum}     {Nata cuajada}          {}
+\newVocabularyConcept{Ricotta}              {}              {\typeNoum}     {Ricotta}               {}
+\newVocabularyConcept{Mozzarella}           {}              {\typeNoum}     {Mozzarella}            {}
+\newVocabularyConcept{Parmesan}             {}              {\typeNoum}     {Parmigiano}            {}
+\newVocabularyConcept{Cheddar}              {}              {\typeNoum}     {Cheddar}               {}
+\newVocabularyConcept{Feta}                 {}              {\typeNoum}     {Feta}                  {}
+\newVocabularyConcept{Brie}                 {}              {\typeNoum}     {Brie}                  {}
+\newVocabularyConcept{Mascarpone}           {}              {\typeNoum}     {Mascarpone}            {}
+\newVocabularyConcept{Sour cream}           {}              {\typeNoum}     {Crema agria}           {}
+\newVocabularyConcept{Buttermilk}           {}              {\typeNoum}     {Suero de mantequilla}  {}
