American English exceptions added to Irregular verbs table

--- a/src/data/data_IrregularVerbs/Data_IrregularVerbs_VerbList.tex
+++ b/src/data/data_IrregularVerbs/Data_IrregularVerbs_VerbList.tex
@@ -17,7 +17,7 @@
 \newIrregularVerb{Bring}{}	            {Brought}{}	            {Brought}{}             {Traer}{}
 \newIrregularVerb{Broadcast}{}	        {Broadcast}{}	        {Broadcast}{}           {Emitir}{}
 \newIrregularVerb{Build}{}	            {Built}{}	            {Built}{}               {Construir}{}
-\newIrregularVerb{Burn}{}	            {Burnt/Burned}{}	    {Burnt/Burned}{}        {Quemar}{}
+\newIrregularVerb{Burn}{}	            {Burnt}{Burned}	        {Burned}{Burnt}         {Quemar}{}
 \newIrregularVerb{Burst}{}	            {Burst}{}	            {Burst}{}               {Estallar}{}
 \newIrregularVerb{Buy}{}	            {Bought}{}	            {Bought}{}              {Comprar}{}
 \newIrregularVerb{Catch}{}	            {Caught}{}	            {Caught}{}              {Coger / Atrapar}{}
@@ -29,9 +29,10 @@
 \newIrregularVerb{Cut}{}	            {Cut}{}	                {Cut}{}                 {Cortar}{}
 \newIrregularVerb{Deal}{}	            {Dealt}{}	            {Dealt}{}               {Negociar}{}
 \newIrregularVerb{Dig}{}	            {Dug}{}	                {Dug}{}                 {Cavar}{}
+\newIrregularVerb{Dive}{}	            {Dived}{}	            {Dived}{Dove}           {Bucear / Zambullirse}{}
 \newIrregularVerb{Do}{}	                {Did}{}	                {Done}{}                {Hacer}{}
 \newIrregularVerb{Draw}{}	            {Drew}{}	            {Drawn}{}               {Dibujar}{}
-\newIrregularVerb{Dream}{}	            {Dreamt/Dreamed}{}	    {Dreamt/Dreamed}{}      {Soñar / Fantasear}{}
+\newIrregularVerb{Dream}{}	            {Dreamt}{Dreamed}	    {Dreamed}{Dreamt}       {Soñar / Fantasear}{}
 \newIrregularVerb{Drink}{}	            {Drank}{}	            {Drunk}{}               {Beber}{}
 \newIrregularVerb{Drive}{}	            {Drove}{}	            {Driven}{}              {Conducir}{}
 \newIrregularVerb{Eat}{}	            {Ate}{}	                {Eaten}{}               {Comer}{}
@@ -40,6 +41,7 @@
 \newIrregularVerb{Feel}{}	            {Felt}{}	            {Felt}{}                {Sentir}{}
 \newIrregularVerb{Fight}{}	            {Fought}{}	            {Fought}{}              {Luchar}{}
 \newIrregularVerb{Find}{}	            {Found}{}	            {Found}{}               {Encontrar}{}
+\newIrregularVerb{Fit}{}	            {Fitted}{Fit}	        {Fitted}{Fit}           {Ajustar / Encajar}{}
 \newIrregularVerb{Fly}{}	            {Flew}{}	            {Flown}{}               {Volar}{}
 \newIrregularVerb{Forbid}{}	            {Forbade}{}	            {Forbidden}{}           {Prohibir}{}
 \newIrregularVerb{Forget}{}	            {Forgot}{}	            {Forgotten}{}           {Olvidar}{}
@@ -58,12 +60,12 @@
 \newIrregularVerb{Hold}{}	            {Held}{}	            {Held}{}                {Agarrar / Resistir}{}
 \newIrregularVerb{Hurt}{}	            {Hurt}{}	            {Hurt}{}                {Doler / Lastimar}{}
 \newIrregularVerb{Keep}{}	            {Kept}{}	            {Kept}{}                {Conservar / Guardar}{}
-\newIrregularVerb{Kneel}{}	            {Knelt}{}	            {Knelt}{}               {Arrodillarse}{}
+\newIrregularVerb{Kneel}{}	            {Knelt}{}	            {Knelt}{Kneeled}        {Arrodillarse}{}
 \newIrregularVerb{Know}{}	            {Knew}{}	            {Known}{}               {Saber / Conocer}{}
 \newIrregularVerb{Lay}{}	            {Laid}{}	            {Laid}{}                {Poner / Extender}{}
 \newIrregularVerb{Lead}{}	            {Led}{}	                {Led}{}                 {Guiar / Dirigir}{}
-\newIrregularVerb{Lean}{}	            {Leant/Leaned}{}	    {Leant/Leaned}{}        {Apoyarse / Inclinarse}{}
-\newIrregularVerb{Learn}{}	            {Learnt/Learned}{}	    {Learnt/Learned}{}      {Aprender}{}
+\newIrregularVerb{Lean}{}	            {Leaned}{}	            {Leant}{Leaned}         {Apoyarse / Inclinarse}{}
+\newIrregularVerb{Learn}{}	            {Learned}{}	            {Learnt}{Learned}       {Aprender}{}
 \newIrregularVerb{Leave}{}	            {Left}{}	            {Left}{}                {Irse / Marcharse}{}
 \newIrregularVerb{Lend}{}	            {Lent}{}	            {Lent}{}                {Prestar}{}
 \newIrregularVerb{Lie}{}	            {Lay}{}	                {Lain}{}                {Tumbarse / Echarse}{}
@@ -77,9 +79,10 @@
 \newIrregularVerb{Overtake}{}	        {Overtook}{}	        {Overtaken}{}           {Adelantar / Sobrepasar}{}
 \newIrregularVerb{Pay}{}	            {Paid}{}	            {Paid}{}                {Pagar}{}
 \newIrregularVerb{Put}{}	            {Put}{}	                {Put}{}                 {Poner}{}
+\newIrregularVerb{Quit}{}	            {Quitted}{Quit}	        {Quitted}{Quit}         {Dejar / Parar / Renunciar}{}
 \newIrregularVerb{Read}{}	            {Read}{}	            {Read}{}                {Leer}{}
-\newIrregularVerb{Ride}{}	            {Rode}{}	            {Ridden}{}              {Conducir}{Vehículos a horcajadas}
-\newIrregularVerb{Ring}{}	            {Rang}{}	            {Rung}{}                {Llamar por telefono / Sonar una campana}{}
+\newIrregularVerb{Ride}{}	            {Rode}{}	            {Ridden}{}              {Conducir}{A horcajadas}
+\newIrregularVerb{Ring}{}	            {Rang}{}	            {Rung}{}                {Timbrar / Llamar por telefono}{}
 \newIrregularVerb{Rise}{}	            {Rose}{}	            {Risen}{}               {Subir / Aumentar / Levantarse}{}
 \newIrregularVerb{Run}{}	            {Ran}{}	                {Run}{}                 {Correr}{}
 \newIrregularVerb{Saw}{}	            {Sawed}{}	            {Sawn/Sawed}{}          {Serrar}{}
@@ -101,14 +104,15 @@
 \newIrregularVerb{Sit}{}	            {Sat}{}	                {Sat}{}                 {Sentarse}{}
 \newIrregularVerb{Sleep}{}	            {Slept}{}	            {Slept}{}               {Dormir}{}
 \newIrregularVerb{Slide}{}	            {Slid}{}	            {Slid}{}                {Deslizar / resbalar}{}
-\newIrregularVerb{Smell}{}	            {Smelt}{}	            {Smelt}{}               {Oler}{Emitir olor o percibirlo}
+\newIrregularVerb{Smell}{}	            {Smelt}{Smelled}	    {Smelled}{Smelt}        {Oler}{Emitir olor o percibirlo}
 \newIrregularVerb{Sow}{}	            {Sowed}{}	            {Sown/Sowed}{}          {Sembrar}{}
 \newIrregularVerb{Speak}{}	            {Spoke}{}	            {Spoken}{}              {Hablar}{}
-\newIrregularVerb{Spell}{}	            {Spelt/Spelled}{}	    {Spelt/Spelled}{}       {Deletrear / Escribir}{}
+\newIrregularVerb{Spell}{}	            {Spelt}{Spelled}	    {Spelled}{Spelled}      {Deletrear / Escribir}{}
 \newIrregularVerb{Spend}{}	            {Spent}{}	            {Spent}{}               {Gastar}{}
-\newIrregularVerb{Spill}{}	            {Spilt/Spilled}{}	    {Spilt/Spilled}{}       {Derramar / Verter}{}
+\newIrregularVerb{Spill}{}	            {Spilt}{Spilled}	    {Spilled}{Spilt}        {Derramar / Verter}{}
 \newIrregularVerb{Spin}{}	            {Spun}{}	            {Spun}{}                {Girar}{}
 \newIrregularVerb{Spit}{}	            {Spat}{}	            {Spat}{}                {Escupir}{}
+\newIrregularVerb{Spoil}{}	            {Spoilt}{Spoiled}	    {Spoiled}{Spoilt}       {Arruinar / Estropear}{}
 \newIrregularVerb{Spread}{}	            {Spread}{}	            {Spread}{}              {Extender}{}
 \newIrregularVerb{Stand}{}	            {Stood}{}	            {Stood}{}               {Ponerse de pie}{}
 \newIrregularVerb{Steal}{}	            {Stole}{}	            {Stolen}{}              {robar}{}
@@ -131,6 +135,7 @@
 \newIrregularVerb{Wake}{}	            {Woke}{}	            {Woken}{}               {Ponerse / Llevar puerto}{}
 \newIrregularVerb{Wear}{}	            {Wore}{}	            {Worn}{}                {Despertar / Despertarse}{}
 \newIrregularVerb{Weep}{}	            {Wept}{}	            {Wept}{}                {Llorar}{}
+\newIrregularVerb{Wet}{}	            {Wetted}{Wetted}	    {Wetted}{Wet}           {Mojar}{}
 \newIrregularVerb{Win}{}	            {Won}{}	                {Won}{}                 {Ganar}{}
 \newIrregularVerb{Wind}{}	            {Wound}{}	            {Wound}{}               {Enrollar}{}
 \newIrregularVerb{Write}{}	            {Wrote}{}	            {Written}{}             {Escribir}{}
