Updated table's title

--- a/src/sections/IrregularVerbs.tex
+++ b/src/sections/IrregularVerbs.tex
@@ -1,4 +1,5 @@
 \section{Irregular Verbs}
 \label{sec:IrregularVerbs}
 
-\PrintIrregularVerbs{data/data_IrregularVerbs/data_IrregularVerbs_verbList}{Irregular Verbs}
+\PrintIrregularVerbs{data/data_IrregularVerbs/data_IrregularVerbs_VerbList}{Irregular Verbs}
+\PrintIrregularVerbs{data/data_IrregularVerbs/data_IrregularVerbs_ModalList}{Modal Verbs}
