Irregular verb table modificate. Verbs writed in bold

--- a/src/data/data_IrregularVerbs/Data_IrregularVerbs_VerbList.tex
+++ b/src/data/data_IrregularVerbs/Data_IrregularVerbs_VerbList.tex
@@ -104,7 +104,7 @@
 \newIrregularVerb{Sit}{}	            {Sat}{}	                {Sat}{}                 {Sentarse}{}
 \newIrregularVerb{Sleep}{}	            {Slept}{}	            {Slept}{}               {Dormir}{}
 \newIrregularVerb{Slide}{}	            {Slid}{}	            {Slid}{}                {Deslizar / resbalar}{}
-\newIrregularVerb{Smell}{}	            {Smelt}{Smelled}	    {Smelled}{Smelt}        {Oler}{Emitir olor o percibirlo}
+\newIrregularVerb{Smell}{}	            {Smelt}{Smelled}	    {Smelled}{Smelt}        {Oler}{Emitir y percibir}
 \newIrregularVerb{Sow}{}	            {Sowed}{}	            {Sown/Sowed}{}          {Sembrar}{}
 \newIrregularVerb{Speak}{}	            {Spoke}{}	            {Spoken}{}              {Hablar}{}
 \newIrregularVerb{Spell}{}	            {Spelt}{Spelled}	    {Spelled}{Spelled}      {Deletrear / Escribir}{}
