--- a/src/sections/IrregularVerbs.tex
+++ b/src/sections/IrregularVerbs.tex
@@ -2,4 +2,4 @@
 \label{sec:IrregularVerbs}
 
 \PrintIrregularVerbs{data/data_IrregularVerbs/data_IrregularVerbs_VerbList}{Irregular Verbs}
-\PrintIrregularVerbs{data/data_IrregularVerbs/data_IrregularVerbs_ModalList}{Modal Verbs}
+%\PrintIrregularVerbs{data/data_IrregularVerbs/data_IrregularVerbs_ModalList}{Modal Verbs}
